--- a/template/template.css
+++ b/template/template.css
@@ -232,3 +232,38 @@ div.logo span {
 }
 .template-list .row .template-image img {
 }
+
+/* media query*/
+@media screen and (max-width: 767px) {
+    .create-cv-btn {
+        width: 200px;
+    }
+    /* header responsive */
+    header {
+        padding: 18px 0;
+    }
+    header .logo, .header .nav-toggle {
+        margin-bottom: 15px;
+    }
+    .nav-toggle {
+        display: flex;
+    }
+    header .nav {
+      width: 100%;
+      height: 0;
+      transition: 0.3s ease all;
+      overflow: hidden;
+    }
+    header .nav.open {
+        height: 280px;
+    }
+
+    header .nav li {
+        display: block;
+        padding: 22px 0;
+    }
+    header .nav li a {
+        padding: 0;
+        color: black;
+    }
+}
